# My-Portfolio

./: .gitignore  Web_Design_Guide_Vibe_Coder.docx  sat_may_30_2026_creating_an_animated_portfolio_website.md
BongoCat-master/: .gitignore  .release-it.ts  Cargo.toml  LICENSE  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
BongoCat-master/.github/: CONTRIBUTING.md  DOWNLOAD_GUIDE.md
BongoCat-master/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
BongoCat-master/.github/workflows/: release.yml  sync-to-gitee.yml  upgradelink.yml
BongoCat-master/scripts/: buildIcon.ts  release.ts
BongoCat-master/src/: App.vue  main.ts
BongoCat-master/src-tauri/: .gitignore  BongoCat.desktop  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
BongoCat-master/src-tauri/assets/models/gamepad/: cat.model3.json  demomodel3.cdi3.json  exp_2.exp3.json
BongoCat-master/src-tauri/assets/models/keyboard/: cat.model3.json  demomodel2.cdi3.json  exp_1.exp3.json  live2d_expression0.exp3.json  live2d_expression2.exp3.json
BongoCat-master/src-tauri/assets/models/standard/: cat.model3.json  demomodel.cdi3.json  live2d_expression1.exp3.json  live2d_motion1.motion3.json  live2d_motion2.motion3.json
BongoCat-master/src-tauri/capabilities/: default.json
BongoCat-master/src-tauri/src/: lib.rs  main.rs
BongoCat-master/src-tauri/src/core/: device.rs  gamepad.rs  mod.rs
BongoCat-master/src-tauri/src/core/setup/: macos.rs  mod.rs
BongoCat-master/src-tauri/src/plugins/window/: Cargo.toml  build.rs
BongoCat-master/src-tauri/src/plugins/window/permissions/: default.toml
BongoCat-master/src-tauri/src/plugins/window/src/: lib.rs
BongoCat-master/src-tauri/src/utils/: fs_extra.rs  mod.rs
BongoCat-master/src/assets/css/: global.scss
BongoCat-master/src/components/pro-list/: index.vue
BongoCat-master/src/components/pro-list-item/: index.vue
BongoCat-master/src/components/shortcut/: index.vue
BongoCat-master/src/components/update-app/: index.vue
BongoCat-master/src/composables/: useAppMenu.ts  useDevice.ts  useGamepad.ts  useKeyPress.ts  useModel.ts  useTauriListen.ts  useThemeVars.ts  useTray.ts  useWindowState.ts
BongoCat-master/src/constants/: index.ts
BongoCat-master/src/locales/: en-US.json  index.ts  pt-BR.json  vi-VN.json  zh-CN.json  zh-TW.json
BongoCat-master/src/pages/main/: index.vue
BongoCat-master/src/pages/preference/: index.vue
BongoCat-master/src/plugins/: window.ts
BongoCat-master/src/router/: index.ts
BongoCat-master/src/stores/: app.ts  cat.ts  general.ts  model.ts  shortcut.ts
BongoCat-master/src/utils/: is.ts  keyboard.ts  live2d.ts  monitor.ts  path.ts  platform.ts  shared.ts
(+77 files in other folders)
