[package]
name = "tauri-plugin-custom-window"
version = "0.1.0"
authors = []
description = ""
edition = "2024"
rust-version = "1.85.0"
links = "tauri-plugin-custom-window"

[dependencies]
tauri.workspace = true
serde.workspace = true

[build-dependencies]
tauri-plugin.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }